# hapi-rs

./: .gitignore  Cargo.toml
src/: hapi.rs  lib.rs  main.rs
src/hapi/: archive.rs  reader.rs  util.rs
src/hapi/archive/: file_decoder.rs
